tests/ui/error-codes/E0459.stderr
error[E0459]: `#[link]` attribute requires a `name = "string"` argument
  --> $DIR/E0459.rs:1:1
   |
LL | #[link(kind = "dylib")] extern "C" {}
   | ^^^^^^^^^^^^^^^^^^^^^^^ missing `name` argument

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0459`.
