tests/ui/error-codes/E0459.rs
#[link(kind = "dylib")] extern "C" {} //~ ERROR E0459

fn main() {
}
